All functions and help files updated
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/downscale@10 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/TODO
+++ b/pkg/TODO
@@ -10,6 +10,7 @@ help files:
     proper ordering with plot
 - ensemble.downscale
     examples
+- upgrain
     
 scale of saturation
 scale of endemism
@@ -18,5 +19,6 @@ proportion of occupancy
 tolerance
 logistic - lower limit of C = 0?
 
-error checking predict results - NAs, 0's, outliers, bigger values
-stop("Larger occupancies predicted at finer grains than larger grains. Try a lower tolerance value.")
+Functions:
+- hui model
+- convert occupancies to areas
