--- a/pkg/NEWS
+++ b/pkg/NEWS
@@ -1,7 +1,36 @@
 NEWS for downscale package
 
+raster now depends
+predict different arguments
+can input parameters for donwscale
+more plotting arguments
+calculates AOO
+
+
+Changes for 0.7
+---------------
+24/04/2015
+Function upgrain.threshold added to explore trade-offs in threshold selection
+upgrain now allows thresholds of the four default thresholds
+
+Changes for 0.6
+---------------
+14/04/2015
+Plotting added to upgrain function
+Hui model added
+
 Changes for 0.5
 ---------------
+13/03/2015
+Starting parameters modified
+Corrected plotting when 0's predicted
+
+Changes for 0.5
+---------------
+24/02/2015
+ensemble.predict: means calculated as mean of log occupancies
+ensemble.predict: warning messages for inconsistent results
+
 23/02/2015
 package.rd file updated
 ensemble - different tolerances allowed for modelling and predicting
