--- a/pkg/downscale/vignettes/Downscaling.tex
+++ b/pkg/downscale/vignettes/Downscaling.tex
@@ -88,12 +88,11 @@ For downscale modelling it is important they check their data for the scale of s
 
 \section{Package tutorial}
 
-First, we must download the downscale package from R-forge.
+First, we must download the downscale package from CRAN.
 
 \begin{Schunk}
 \begin{Sinput}
-> install.packages("downscale",
-+                  repos = "http://R-Forge.R-project.org")
+> install.packages("downscale")
 \end{Sinput}
 \end{Schunk}
 
