All presences now changed to All occurrences Bugs fixed for number of upgraining scales, scale of endemism and plotting now optional Vignettes updated
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/downscale@25 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/downscale/NEWS
+++ b/pkg/downscale/NEWS
@@ -2,6 +2,15 @@ NEWS for downscale package
 
 Changes for 1.0
 ---------------
+09/10/2015
+upgrain and upgrain.threshold: 'All Presences' changed to 'All_Occurrences'
+upgrain and upgrain.threshold: bugs fixed when selecting number of scales
+upgrain: plotting now optional
+DataInput: bug in scale of endemism corrected
+Vignettes updated
+
+Changes for 1.0
+---------------
 18/05/2015
 plot and predict changed to s3 methods
 help files and examples updated
