git-svn-id: svn://svn.r-forge.r-project.org/svnroot/downscale@33 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/downscale/vignettes/Downscaling.tex
+++ b/pkg/downscale/vignettes/Downscaling.tex
@@ -679,8 +679,8 @@ The libraries \texttt{spocc} and \texttt{spoccutils} will automatically harvest 
 \begin{Schunk}
 \begin{Sinput}
 ## if you need to, install the packages
-install.package("spocc")
-install.package("spoccutils")
+install.packages("spocc")
+install.packages("spoccutils")
 
 ## load in the necessary libraries
 library(spoccutils)
