Bug in upgrain.R fixed
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/downscale@41 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/downscale/NEWS
+++ b/pkg/downscale/NEWS
@@ -1,5 +1,12 @@
 NEWS for downscale package
 
+Changes for 1.1-0
+---------------
+25/02/2015
+Bug for calculating extent in upgrain function fixed
+upgrain now can return all upgrained rasters
+ExtendRaster function deleted (now obsolete)
+
 Changes for 1.0
 ---------------
 09/10/2015
