--- a/pkg/downscale/NEWS
+++ b/pkg/downscale/NEWS
@@ -1,5 +1,10 @@
 NEWS for downscale package
 
+Changes for 1.1-1
+---------------
+09/03/2015
+'spocc' replaced by 'rgbif' in tutorial
+
 Changes for 1.1-0
 ---------------
 25/02/2015
