--- a/pkg/downscale/NEWS
+++ b/pkg/downscale/NEWS
@@ -1,6 +1,11 @@
 NEWS for downscale package
 
-Changes for 1.1-1
+Changes for 1.2-1
+---------------
+10/03/2015
+Tutorials checked and adjusted
+
+Changes for 1.2-0
 ---------------
 09/03/2015
 'spocc' replaced by 'rgbif' in tutorial
