--- a/pkg/downscale/vignettes/Upgraining.Rnw
+++ b/pkg/downscale/vignettes/Upgraining.Rnw
@@ -106,13 +106,13 @@ The user can, of course, use any threshold as the input for the \texttt{upgrain}
 \hline \noalign{\smallskip}
 Threshold & Name & Description  \\
 \hline \noalign{\smallskip}
-0 & "All\_Sampled" & All of the original atlas data is included (Fig. \ref{fig:All interior}). \\ [0.2cm]
+0 & \texttt{"All\_Sampled"} & All of the original atlas data is included (Fig. \ref{fig:All interior}). \\ [0.2cm]
 
-Blue line (species-specific) & "All\_Occurrences" & The threshold where no occurrences in the atlas data are excluded (Fig. \ref{fig:Threshold plots}d). \\ [0.2cm]
+Blue line (species-specific) & \texttt{"All\_Occurrences"} & The threshold where no occurrences in the atlas data are excluded (Fig. \ref{fig:Threshold plots}d). \\ [0.2cm]
 
-Red line (atlas-specific) & "Gain\_Equals\_Loss" & The threshold where the number of sampled atlas cells reclassified as No Data equals the number of unsampled exterior cells reclassified as absence (plot b). In this threshold the new standardised extent also equals the extent of the original atlas data (Fig. \ref{fig:Threshold plots}a). \\ [0.2cm]
+Red line (atlas-specific) & \texttt{"Gain\_Equals\_Loss"} & The threshold where the number of sampled atlas cells reclassified as No Data equals the number of unsampled exterior cells reclassified as absence (plot b). In this threshold the new standardised extent also equals the extent of the original atlas data (Fig. \ref{fig:Threshold plots}a). \\ [0.2cm]
 
-1 & "Sampled\_Only" & Only cells that contain 100\% sampled atlas data are included (Fig. \ref{fig:Interior only}). \\ [0.1cm]
+1 & \texttt{"Sampled\_Only"} & Only cells that contain 100\% sampled atlas data are included (Fig. \ref{fig:Interior only}). \\ [0.1cm]
 \hline
 \end{tabular}
 \end{table}
@@ -150,7 +150,7 @@ head(thresh$Data)
 \end{Soutput}
 \end{Schunk}
 
-Figure  shows the maps if each of these thresholds were applied. The semi-transparent area withi\ref{fig:Threshold maps}n the black polygon are the cells included after applying the threshold. This is overlain on the original atlas data where red = presence, light grey = absence, and dark grey = unsampled cells. The plots allow a visual interpretation of where and how much sampled data is removed and unsampled data added. For example, due to the distribution of our unsampled cells throughout our atlas data, the "Sampled\_Only" threshold only captures the very central portion of our species distribution. The "Gain\_Equals\_Loss" threshold excludes some occurrences at the edges of the species distribution, whereas the "All\_Occurrences" threshold includes a large amount of unsampled areas.
+Figure \ref{fig:Threshold maps} shows the maps if each of these thresholds were applied. The semi-transparent area within the black polygon are the cells included after applying the threshold. This is overlain on the original atlas data where red = presence, light grey = absence, and dark grey = unsampled cells. The plots allow a visual interpretation of where and how much sampled data is removed and unsampled data added. For example, due to the distribution of our unsampled cells throughout our atlas data, the \texttt{"Sampled\_Only"} threshold only captures the very central portion of our species distribution. The \texttt{"Gain\_Equals\_Loss"} threshold excludes some occurrences at the edges of the species distribution, whereas the \texttt{"All\_Occurrences"} threshold includes a large amount of unsampled areas.
 
 \begin{figure}[!ht]
 \centering
@@ -159,7 +159,7 @@ Figure  shows the maps if each of these thresholds were applied. The semi-transp
 \label{fig:Threshold maps}
 \end{figure}
 
-A further consideration is the number of scales to upgrain. A larger number of scales means there is more data to fit the downscaling models, however the larger discrepancy there will be between the original extent of the atlas data and the new standardised extent. We can see that exemplified in first figure \ref{fig:Threshold maps 2}. 
+A further consideration is the number of scales to upgrain. A larger number of scales means there is more data to fit the downscaling models, however the larger discrepancy there will be between the original extent of the atlas data and the new standardised extent. We can see that exemplified in the following examples. First we will upgrain only a further two scales. 
 
 \begin{Schunk}
 \begin{Sinput}
@@ -171,7 +171,7 @@ thresh <- upgrain.threshold(atlas.data = atlas.data,
 \end{Sinput}
 \end{Schunk}
 
-Here we have upgrained another two grain sizes, resulting in three estimates of proportion of occupancy. Compared to figure \ref{fig:Threshold maps} the standardised data are much more similar to the original atlas data (fig. \ref{fig:Threshold maps 2}). However, three estimates of occupancy is the minimum necessary for fitting the downscale models, and a poor fit in the model may results in a poor prediction of occupancy at finer grain sizes.
+Here we have upgrained another two grain sizes, resulting in three estimates of proportion of occupancy. Compared to figure \ref{fig:Threshold maps} the standardised data are much more similar to the original atlas data (fig. \ref{fig:Threshold maps 2}). However, three estimates of occupancy is the minimum necessary for fitting the downscale models and so may result in a poor model fit and therefore poor predictions of occupancy at finer grain sizes.
 
 \begin{figure}[ht]
 \centering
@@ -199,8 +199,8 @@ thresh <- upgrain.threshold(atlas.data = atlas.data,
 \label{fig:Threshold maps 4}
 \end{figure}
 
-Now we have more data for fitting the models, but the standardised data is some way different from the original atlas data (fig. \ref{fig:Threshold maps 4}) and there is no way to assign a "Sampled\_Only" threshold. It is also important to remember that once the scale of saturation or endemism is reached for a given species, there is no further value from larger grain sizes as these are discarded for modelling purposes. The scale of saturation is the grain size at which all cells are occupied, and the scale of endemism is the grain size where only a single cell is occupied. Use the \texttt{upgrain} function to check for scales of endemism or saturation for your chosen scale and threshold. 
+Now we have more data for fitting the models, but the standardised data is some way different from the original atlas data (fig. \ref{fig:Threshold maps 4}) and there is no way to assign a \texttt{"Sampled\_Only"} threshold. It is also important to remember that once the scale of saturation or endemism is reached for a given species, there is no further value from larger grain sizes as these are discarded for modelling purposes. The scale of saturation is the grain size at which all cells are occupied, and the scale of endemism is the grain size where only a single cell is occupied. Use the \texttt{upgrain} function to check for scales of endemism or saturation for your chosen scale and threshold. 
 
-The choice of threshold and number of scales to upgrain is therefore dependent upon the shape of the atlas region and the distribution of the species under study. For example, if the atlas region is rectangular then the “Sampled\_Only” threshold may result in no loss of sampled cells and in fact all four threshold options may be the same. Or if a species is confined to the interior of the region then the “All\_Occurrences” threshold may equal the “Sampled\_Only” threshold. Alternatively, for a species confined to the edges of the atlas region then the “All\_Occurrences” threshold may equal the “All\_ Sampled” threshold. Therefore, we provide no single recommendation, but instead the final choice of threshold and number of scales to the user to determine on a case-by-case basis. For this we recommend that it is often worth exploring several scales and threshold criteria, following each through \texttt{upgrain.threshold}, \texttt{upgrain}, \texttt{downscale} and \texttt{predict.downscale} in order to visually assess the process at each stage, and ultimately which upgraining procedure is likely providing the best model fits and predictions.
+The choice of threshold and number of scales to upgrain is therefore dependent upon the shape of the atlas region and the distribution of the species under study. For example, if the atlas region is rectangular then the \texttt{"Sampled\_Only"} threshold may result in no loss of sampled cells and in fact all four threshold options may be the same. Or if a species is confined to the interior of the region then the \texttt{"All\_Occurrences"} threshold may equal the \texttt{"Sampled\_Only"} threshold. Alternatively, for a species confined to the edges of the atlas region then the \texttt{"All\_Occurrences"} threshold may equal the \texttt{"All\_Sampled"} threshold. Therefore, we provide no single recommendation, but instead the final choice of threshold and number of scales to the user to determine on a case-by-case basis. For this we recommend that it is often worth exploring several scales and threshold criteria, following each through \texttt{upgrain.threshold}, \texttt{upgrain}, \texttt{downscale} and \texttt{predict.downscale} in order to visually assess the process at each stage, and ultimately which upgraining procedure is likely providing the best model fits and predictions.
 
 \end{document}
