--- a/pkg/downscale/NEWS
+++ b/pkg/downscale/NEWS
@@ -1,24 +1,29 @@
 NEWS for downscale package
 
+Changes for 1.2-3
+---------------
+29/09/2016
+No need to input cell width in hui.downscale with raster
+
 Changes for 1.2-2
 ---------------
-18/08/2015
+18/08/2016
 Default upgraining method changed to "All_Sampled"
 Names of parameters harmonised with JSS paper
 
 Changes for 1.2-1
 ---------------
-10/03/2015
+10/03/2016
 Tutorials checked and adjusted
 
 Changes for 1.2-0
 ---------------
-09/03/2015
+09/03/2016
 'spocc' replaced by 'rgbif' in tutorial
 
 Changes for 1.1-0
 ---------------
-25/02/2015
+25/02/2016
 Bug for calculating extent in upgrain function fixed
 upgrain now can return all upgrained rasters
 ExtendRaster function deleted (now obsolete)
