Bug in apply in error checking fixed
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/downscale@48 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/downscale/NEWS
+++ b/pkg/downscale/NEWS
@@ -1,5 +1,10 @@
 NEWS for downscale package
 
+Changes for 1.2-4
+---------------
+24/11/2016
+Bug fixed with error checking in predict.downscale and ensemble.downscale
+
 Changes for 1.2-3
 ---------------
 29/09/2016
