--- a/pkg/downscale/NEWS
+++ b/pkg/downscale/NEWS
@@ -1,5 +1,11 @@
 NEWS for downscale package
 
+Changes for 2.0-0
+---------------
+28/07/2017
+'lat' and 'lon' replaced with 'x' and 'y' in data frame input
+SpatialPointsDataFrame allowed as input
+
 Changes for 1.2-4
 ---------------
 24/11/2016
