SpatialPointsDataFrame examples added to help file
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/downscale@52 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/downscale/NEWS
+++ b/pkg/downscale/NEWS
@@ -1,5 +1,15 @@
 NEWS for downscale package
 
+Changes for 2.0-2
+---------------
+07/08/2017
+SpatialPointsDataFrame input added to upgrain helpfile
+
+Changes for 2.0-1
+---------------
+01/08/2017
+Bug when using SpatialPointsDataFrame corrected
+
 Changes for 2.0-0
 ---------------
 28/07/2017
