table of input parameters altered
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/downscale@53 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/downscale/NEWS
+++ b/pkg/downscale/NEWS
@@ -2,8 +2,9 @@ NEWS for downscale package
 
 Changes for 2.0-2
 ---------------
-07/08/2017
+08/08/2017
 SpatialPointsDataFrame input added to upgrain helpfile
+downscale helpfile updated
 
 Changes for 2.0-1
 ---------------
