--- a/pkg/downscale/NEWS
+++ b/pkg/downscale/NEWS
@@ -1,5 +1,10 @@
 NEWS for downscale package
 
+Changes for 2.0-3
+---------------
+24/08/2017
+CITATION file added for JSS in press article
+
 Changes for 2.0-2
 ---------------
 08/08/2017
