Citations for JSS article added
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/downscale@56 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/downscale/NEWS
+++ b/pkg/downscale/NEWS
@@ -1,5 +1,10 @@
 NEWS for downscale package
 
+Changes for 3.0-0
+---------------
+30/08/2018
+CITATION file added for JSS article and that and MEE article added to references
+
 Changes for 2.0-3
 ---------------
 24/08/2017
