--- a/pkg/downscale/vignettes/Downscaling.tex
+++ b/pkg/downscale/vignettes/Downscaling.tex
@@ -41,7 +41,7 @@ In order to assess and manage the status of a species we need to know the abunda
 
 A solution is to employ the occupancy-area relationship (OAR); the increase in the  area occupied by a species as grain size increases (Kunin 1998). If the relationship can be described at these coarser grain sizes where confidence is high, then we can extrapolate to predict occupancy at the fine grain sizes more closely related to the true abundance and conservation status.
 
-Many models have been proposed to describe this geometric relationship, and it appears that no one model consistently provides the best predictions (Azaele et al. 2012, Barwell et al. 2014). This package provides functions for ten commonly applied model: Nachman, power law, logistic, poisson, negative binomial, generalised negative binomial, improved negative binomial, finite negative binomial, Thomas and Hui models. The Hui model (Hui et al. 2006, 2009) is unique in that it only requires data from a single spatial scale but does require the spatial relationships (i.e. cell coordinates) of all cells. The other nine models require the occupancies at multiple grain sizes. The package then attempts to optimise the model parameters to fit the occupancy data in log-log space. Once each model is parameterised the relationships are extrapolated to estimate occupancy at finer grain sizes.
+Many models have been proposed to describe this geometric relationship, and it appears that no one model consistently provides the best predictions (Azaele et al. 2012, Barwell et al. 2014, Groom et. al. 2018). This package provides functions for ten commonly applied model: Nachman, power law, logistic, poisson, negative binomial, generalised negative binomial, improved negative binomial, finite negative binomial, Thomas and Hui models. The Hui model (Hui et al. 2006, 2009) is unique in that it only requires data from a single spatial scale but does require the spatial relationships (i.e. cell coordinates) of all cells. The other nine models require the occupancies at multiple grain sizes. The package then attempts to optimise the model parameters to fit the occupancy data in log-log space. Once each model is parameterised the relationships are extrapolated to estimate occupancy at finer grain sizes.
 
 \begin{figure}[!h]
 \centering
@@ -68,27 +68,27 @@ For downscaling it is important to check the data for the scale of saturation an
 \label{fig:Saturation}
 \end{figure}
 
+\newpage
 \section{Using the downscale package}
 
 The general flow of the \texttt{downscale} package is presented in fig. \ref{fig:Flow}. The package is based around seven user functions:  \texttt{upgrain.threshold}, \texttt{upgrain}, \texttt{downscale}, \texttt{predict}, \texttt{hui.downscale}, \texttt{plot}, and \texttt{ensemble.downscale}. Ten downscaling models are available (Nachman, power law, logistic, poisson, negative binomial, generalised negative binomial, improved negative binomial, finite negative binomial, Thomas and Hui models). Details of all models can be found in the help files, and in the supplementary information of Barwell et al. 2014. 
 
-The user may input four types of data:
+The user may input three types of data:
 \begin{enumerate} \itemsep1pt \parskip0pt 
 \item [1)] A data frame with columns for grain sizes (cell area) and occupancies in that order;
-\item [2)] A data frame of cell coordinates and presence-absence data (presence = 1; absence = 0). Column names must be ``x”, ``y”, and ``presence” in that order;
+\item [2)] A data frame of cell coordinates and presence-absence data (presence = 1; absence = 0). Column names must be ``lon”, ``lat”, and ``presence” in that order;
 \item [3)] A raster layer of presence-absence data (presence = 1; absence = 0; no data = NA).
-\item [4)] A SpatialPointsDataFrame of cell coordinates along with a data frame of presence-absence data raster layer of presence-absence data (presence = 1; absence = 0; no data = NA).
 \end{enumerate}
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[width=12cm]{Flow.png}
-\caption{\textbf{Structure of the} \texttt{downscale} \textbf{package showing the flow between the seven functions (yellow) and the three output object classes (orange). Black arrows represent the input of raw data of three types: a raster layer of presence-absence data, a SpatialPointsDataFrame where the data are presence-absences, a data frame of cell coordinates and presence-absence for each cell, and a data frame of occupancies at coarse-grain sizes. Yellow arrows are where the output of one function may be used as the input for the next function}}
+\includegraphics[width=9.9cm]{Flow.png}
+\caption{\textbf{Structure of the} \texttt{downscale} \textbf{package showing the flow between the seven functions (yellow) and the three output object classes (orange). Black arrows represent the input of raw data of three types: a raster layer of presence-absence data, a data frame of cell coordinates and presence-absence for each cell, and a data frame of occupancies at coarse-grain sizes. Yellow arrows are where the output of one function may be used as the input for the next function}}
 \label{fig:Flow}
 \end{figure}
 
 \newpage
-To carry out downscaling with the Hui model (Hui et al. 2006, 2009) or upgraining of atlas data (and exploration of upgraining thresholds) then the input data must be of type 2, 3 or 4. The table below shows the functions to use to achieve desired objectives with regards to input data. In all cases \texttt{upgrain.threshold} can be used to explore thresholds for \texttt{upgrain}.
+To carry out downscaling with the Hui model (Hui et al. 2006, 2009) or upgraining of atlas data (and exploration of upgraining thresholds) then the input data must be of type 2 or 3. The table below shows the functions to use to achieve desired objectives with regards to input data. In all cases \texttt{upgrain.threshold} can be used to explore thresholds for \texttt{upgrain}.
 
 \begin{table}[th]
 \small
@@ -108,18 +108,11 @@ Raster layer of presence-       & Downscale            & $\texttt{upgrain} \Righ
 absence data                    & (excluding Hui model)& $\texttt{downscale} \Rightarrow$ \\
                                 &                      & $\texttt{predict} \Rightarrow$ \\
                                 &                      & $\texttt{plot}$ \\ \hline
-SpatialPointsDataFrame          & Downscale            & $\texttt{upgrain} \Rightarrow$ \\
-with presence-absence data      & (excluding Hui model)& $\texttt{downscale} \Rightarrow$ \\
-                                &                      & $\texttt{predict} \Rightarrow$ \\
-                                &                      & $\texttt{plot}$ \\ \hline
 Data frame of cell coordinates  & Downscale            & ($\texttt{upgrain} \Rightarrow$) \\
 and presence-absence data       &	(including Hui model)& $\texttt{hui.downscale} \Rightarrow$ \\
                                 &                      & $\texttt{plot}$ \\ \hline
 Raster layer of presence-       & Downscale            & ($\texttt{upgrain} \Rightarrow$) \\
 absence data                    &	(including Hui model)& $\texttt{hui.downscale} \Rightarrow$ \\
-                                &                      & $\texttt{plot}$ \\ \hline
-SpatialPointsDataFrame          & Downscale            & ($\texttt{upgrain} \Rightarrow$) \\
-with presence-absence data      &	(including Hui model)& $\texttt{hui.downscale} \Rightarrow$ \\
                                 &                      & $\texttt{plot}$ \\ \hline
 Data frame of cell areas        & Ensemble modelling   & $\texttt{ensemble.downscale}$ \\
 and occcupancies                &	(excluding Hui model)& \\ \hline	
@@ -127,10 +120,7 @@ Data frame of cell coordinates  & Ensemble modelling   & $\texttt{upgrain} \Righ
 and presence-absence data       &	(with or without Hui model)& $\texttt{ensemble.downscale}$ \\ \hline
 Raster layer of presence-       & Ensemble modelling   & $\texttt{upgrain} \Rightarrow$ \\
 absence data                    &	(with or without Hui model)& $\texttt{ensemble.downscale}$ \\ \hline
-SpatialPointsDataFrame          & Ensemble modelling   & $\texttt{upgrain} \Rightarrow$ \\
-with presence-absence data      &	(with or without Hui model)& $\texttt{ensemble.downscale}$ \\ \hline
 \end{tabular}
-\caption{\textbf{Flow of functions for downscaling with respect to the type of input data, and if the user wishes to apply the Hui model or not.}}
 \end{table}
 
 \newpage
@@ -249,14 +239,14 @@ atlas.data <- read.table(data.file, header = TRUE)
 \end{Sinput}
 \end{Schunk}
 
-The data frame must have the column names “x”, “y” and “presence”:
+The data frame must have the column names “lon”, “lat” and “presence”:
 
 \begin{Schunk}
 \begin{Sinput}
 head(atlas.data)
 \end{Sinput}
 \begin{Soutput}
-     x   y presence
+   lon lat presence
 1 8170  10        0
 2 8130  20        0
 3 8140  20        0
@@ -266,7 +256,7 @@ head(atlas.data)
 \end{Soutput}
 \end{Schunk}
 
-The first step is to upgrain the atlas data to calculate occupancy at larger grain sizes than the atlas data – this provides the occupancy data points to fit the different downscaling models to. If we simply increase the cell sizes of the atlas data then the extent also increases. As downscaling models requires the proportion of occupancy at each grain, if the proportions are calculated from a different total area in each case we may run in to problems. Therefore it is important that we fix the extent of all grain sizes to the extent of the largest grain size, but this means compromising between assigning unsampled cells as absences or excluding sampled cells. We therefore carry this out by applying a threshold to the proportion of a coarse-scale cell that has been sampled at the fine-scale. For example, if a 40km width cell was only sampled by a single 10km atlas absence cell within it, we may want to discard it as a) it is likely that at least one of the unsampled cells may actually be a presence (coarse-scale false absence), and b) all the unsampled atlas cells would be assigned as absences even though they have not been sampled (atlas-scale false absence). However, discarding the cell will also lead to some loss of information.
+The first step is to upgrain the atlas data to calculate occupancy at larger grain sizes than the atlas data – this provides the occupancy data points to fit the different downscaling models to. If we simply increase the cell sizes of the atlas data then the extent also increases. As downscaling models requires the proportion of occupancy at each grain, if the proportions are calculated from a different total area in each case we may run in to problems. Therefore it is important that we fix the extent of all grain sizes to the extent of the largest grain size, but this means compromising between assigning unsampled cells as absences or excluding sampled cells (Groom et. al. 2018, Marsh et. al. 2018). We therefore carry this out by applying a threshold to the proportion of a coarse-scale cell that has been sampled at the fine-scale. For example, if a 40km width cell was only sampled by a single 10km atlas absence cell within it, we may want to discard it as a) it is likely that at least one of the unsampled cells may actually be a presence (coarse-scale false absence), and b) all the unsampled atlas cells would be assigned as absences even though they have not been sampled (atlas-scale false absence). However, discarding the cell will also lead to some loss of information.
 
 The choice of threshold can have important consequences on the model predictions and so it is highly recommended to read the vignette “Upgraining atlas data for downscaling: threshold selection using \texttt{upgrain.threshold}” and the function helpfile (\texttt{?upgrain.threshold}) for more detail on creating your multi-scale standardised atlas data:
 
@@ -345,7 +335,7 @@ $model
 [1] "INB"
 
 $pars
-         C      gamma          b 
+         C          r          b 
 1.42670491 0.04906771 1.82970792 
 
 $observed
@@ -374,11 +364,11 @@ The downscaling functions use an optimisation procedure to fit the models to the
 \texttt{Nachman}  &	\texttt{"C"} = 0.01       &	\texttt{"z"} = 0.01 & \\	
 \texttt{PL}       &	\texttt{"C"} = 0.01       &	\texttt{"z"} = 0.01 & \\
 \texttt{Logis}    &	\texttt{"C"} = 0.01       &	\texttt{"z"} = 0.01 & \\	
-\texttt{Poisson}  &	\texttt{"gamma"} = 1e-8  &  &	\\
-\texttt{NB}       &	\texttt{"gamma"} = 0.01       &	\texttt{"k"} = 0.01 & \\	
+\texttt{Poisson}  &	\texttt{"lambda"} = 1e-8  &  &	\\
+\texttt{NB}       &	\texttt{"C"} = 0.01       &	\texttt{"k"} = 0.01 & \\	
 \texttt{GNB}	    & \texttt{"C"} = 0.00001    &	\texttt{"z"} = 1    &	\texttt{"k"} = 0.01 \\
-\texttt{INB}	    & \texttt{"C"} = 1          &	\texttt{"gamma"} = 0.01 &	\texttt{"b"} = 0.1 \\
-\texttt{FNB}	    & \texttt{"N"} = 10         &	\texttt{"k"} = 10   & \\	
+\texttt{INB}	    & \texttt{"C"} = 1          &	\texttt{"r"} = 0.01 &	\texttt{"b"} = 0.1 \\
+\texttt{FNB}	    & \texttt{"W"} = 10         &	\texttt{"k"} = 10   & \\	
 \texttt{Thomas}   &	\texttt{"rho"} = 1e-8     &	\texttt{"mu"} = 10  &	\texttt{"sigma"} = 1 \\\hline
 \end{tabular}
 \label{table:pars}
@@ -389,7 +379,7 @@ If using your own parameters, they must be in the form of a list with the same p
 \begin{Schunk}
 \begin{Sinput}
 ## Specifying the starting parameters
-params.new <- list("C" = 0.1, "gamma" = 0.00001, "b" = 0.1)
+params.new <- list("C" = 0.1, "r" = 0.00001, "b" = 0.1)
 inb.new <- downscale(occupancies = occupancy,
                      model = "INB",
                      starting_params = params.new)
@@ -868,7 +858,7 @@ ensemble <- ensemble.downscale(occupancy,
                                new.areas = c(1, 10, 100, 400, 1600, 6400),
                                tolerance_mod = 1e-3,
                                starting_params = list(INB = list(C = 10, 
-                                                                 gamma = 0.01, 
+                                                                 r = 0.01, 
                                                                  b = 0.1)))
 \end{Sinput}
 \begin{Soutput}
@@ -987,7 +977,7 @@ ensemble <- ensemble.downscale(occupancy,
                                new.areas = c(1, 10, 100, 400, 1600, 6400),
                                tolerance_mod = 1e-3,
                                starting_params = list(INB = list(C = 10,
-                                                                 gamma = 0.01,
+                                                                 r = 0.01,
                                                                  b = 0.1)))
 \end{Sinput}
 \begin{Soutput}
@@ -1033,15 +1023,19 @@ Azaele, S., S. J. Cornell, and W. E. Kunin. 2012. Downscaling species occupancy 
 
 Barwell, L. J., S. Azaele, W. E. Kunin, and N. J. B. Isaac. 2014. Can coarse-grain patterns in insect atlas data predict local occupancy? Diversity and Distributions 20:895–907.
 
-Hartley, S., and W. E. Kunin. 2003. Scale dependence of rarity, extincition risk, and conservation priority. Conservation Biology 17:1–12.
+Hartley, S., and W. E. Kunin. 2003. Scale dependence of rarity, extinction risk, and conservation priority. Conservation Biology 17:1–12.
 
 Hui, C., M. A. McGeoch, B. Reyers, P. C. le Roux, M. Greve, and S. L. Chown. 2009. Extrapolating population size from the occupancy-abundance relationship and the scaling pattern of occupancy. Ecological Applications 19:2038–2048.
 
 Hui, C., M. A. McGeoch, and M. Warren. 2006. A spatially explicit approach to estimating species occupancy and spatial correlation. Journal of Animal Ecology 75:140–147.
+
+Groom, Q., Marsh, C.J., Gavish, Y. and W. E. Kunin. 2018. How to predict fine resolution occupancy from coarse occupancy data. Methods in Ecology and Evolution. In press.
 
 IUCN. 2014. Guidelines for using the IUCN Red List categories and criteria.
 
 Kunin, W. E. 1998. Extrapolating species abundance across spatial scales. Science 281:\\
 1513–1515.
 
+Marsh, C.J, Barwell, L.J., Gavish, Y. and W. E. Kunin. 2018. downscale: An R package for downscaling species occupancy from coarse-grain data to predict occupancy at fine-grain sizes. Journal of Statistical Software, Code Snippets 86(3):1-20.
+  
 \end{document}
