--- a/pkg/downscale/vignettes/Upgraining.Rnw
+++ b/pkg/downscale/vignettes/Upgraining.Rnw
@@ -98,7 +98,7 @@ thresh <- upgrain.threshold(atlas.data = atlas.data,
 \label{fig:Threshold plots}
 \end{figure}
 
-The user can, of course, use any threshold as the input for the \texttt{upgrain} function, however we have also identified four possibilities for the user, the two criteria applied in the examples above, as well as a species-specific and an atlas-specific option: 
+The user can, of course, use any threshold as the input for the \texttt{upgrain} function, however we have also identified four possibilities for the user (Groom et. al. 2018, Marsh et. al. 2018), the two criteria applied above, as well as a species-specific and an atlas-specific option: 
 
 \begin{table}[!h]
 \centering
@@ -202,5 +202,11 @@ thresh <- upgrain.threshold(atlas.data = atlas.data,
 Now we have more data for fitting the models, but the standardised data is some way different from the original atlas data (fig. \ref{fig:Threshold maps 4}) and there is no way to assign a \texttt{"Sampled\_Only"} threshold. It is also important to remember that once the scale of saturation or endemism is reached for a given species, there is no further value from larger grain sizes as these are discarded for modelling purposes. The scale of saturation is the grain size at which all cells are occupied, and the scale of endemism is the grain size where only a single cell is occupied. Use the \texttt{upgrain} function to check for scales of endemism or saturation for your chosen scale and threshold. 
 
 The choice of threshold and number of scales to upgrain is therefore dependent upon the shape of the atlas region and the distribution of the species under study. For example, if the atlas region is rectangular then the \texttt{"Sampled\_Only"} threshold may result in no loss of sampled cells and in fact all four threshold options may be the same. Or if a species is confined to the interior of the region then the \texttt{"All\_Occurrences"} threshold may equal the \texttt{"Sampled\_Only"} threshold. Alternatively, for a species confined to the edges of the atlas region then the \texttt{"All\_Occurrences"} threshold may equal the \texttt{"All\_Sampled"} threshold. Therefore, we provide no single recommendation, but instead the final choice of threshold and number of scales to the user to determine on a case-by-case basis. For this we recommend that it is often worth exploring several scales and threshold criteria, following each through \texttt{upgrain.threshold}, \texttt{upgrain}, \texttt{downscale} and \texttt{predict.downscale} in order to visually assess the process at each stage, and ultimately which upgraining procedure is likely providing the best model fits and predictions.
+
+\section{Bibliography}
+
+Groom, Q., Marsh, C.J., Gavish, Y. and W. E. Kunin. 2018. How to predict fine resolution occupancy from coarse occupancy data. Methods in Ecology and Evolution. In press.
+
+Marsh, C.J, Barwell, L.J., Gavish, Y. and W. E. Kunin. 2018. downscale: An R package for downscaling species occupancy from coarse-grain data to predict occupancy at fine-grain sizes. Journal of Statistical Software, Code Snippets 86(3):1-20.
 
 \end{document}
