--- a/pkg/downscale/NEWS
+++ b/pkg/downscale/NEWS
@@ -1,5 +1,10 @@
 NEWS for downscale package
 
+Changes for 3.0-1
+---------------
+31/08/2018
+Extra information and reference added to description
+
 Changes for 3.0-0
 ---------------
 30/08/2018
